--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ambit"
 version = "0.1.0"
-authors = ["Edward Wibowo <wibow9770@gmail.com>, virchau13 <virchau13@mail.hexular.net>"]
+authors = ["Edward Wibowo <wibow9770@gmail.com>", "Vir Chaudhury <virchau13@mail.hexular.net>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
