--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ path = "src/bin/ambit/main.rs"
 clap = "2.33.3"
 dirs = "3.0.1"
 lazy_static = "1.4.0"
+
+[dev-dependencies]
+assert_cmd = "1.0.3"
+tempfile = "3.2.0"
