--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/bin/ambit/main.rs"
 [dependencies]
 clap = "2.33.3"
 dirs = "3.0.1"
+hostname = "0.3.1"
 lazy_static = "1.4.0"
 
 [dev-dependencies]
